Update integration test data to use TCPAddr key.

--- a/test/integration/testdata/conf/namingServerRoot.conf
+++ b/test/integration/testdata/conf/namingServerRoot.conf
@@ -7,7 +7,7 @@
 	"PreloadCaches": false,
     "ServerAddress":                {
                                         "Type":     "TCP",
-                                        "Addr":  {
+                                        "TCPAddr":  {
                                                         "IP":   "127.0.0.1",
                                                         "Port": 5022,
                                                         "Zone": ""
@@ -15,7 +15,7 @@
                                     },
     "PublisherAddress":             {
                                         "Type":     "TCP",
-                                        "Addr":  {
+                                        "TCPAddr":  {
                                                         "IP":   "127.0.0.1",
                                                         "Zone": ""
                                                     }
