--- a/test/integration/testdata/conf/namingServerch.conf
+++ b/test/integration/testdata/conf/namingServerch.conf
@@ -7,14 +7,14 @@
 	"PreLoadCaches": false,
     "ServerAddress":                {
                                         "Type":     "TCP",
-                                        "Addr":  {
+                                        "TCPAddr":  {
                                                         "IP":   "127.0.0.1",
                                                         "Port": 5023
                                                     }
                                     },
     "PublisherAddress":             {
                                         "Type":     "TCP",
-                                        "Addr":  {
+                                        "TCPAddr":  {
                                                         "IP":   "127.0.0.1"
                                                     }
                                     },
