--- a/test/integration/testdata/conf/publisherRoot.conf
+++ b/test/integration/testdata/conf/publisherRoot.conf
@@ -2,7 +2,7 @@
     "ZonefilePath": "testdata/zonefiles/root.txt",
 	"AuthServers": [{
 						"Type":     "TCP",
-						"Addr":  {
+						"TCPAddr":  {
 										"IP":   "127.0.0.1",
 										"Port": 5022,
 										"Zone": ""
