--- a/test/integration/testdata/conf/resolver.conf
+++ b/test/integration/testdata/conf/resolver.conf
@@ -7,7 +7,7 @@
 	"PreloadCaches": false,
     "ServerAddress":                {
                                         "Type":     "TCP",
-                                        "Addr":  {
+                                        "TCPAddr":  {
                                                         "IP":   "127.0.0.1",
                                                         "Port": 5025,
                                                         "Zone": ""
