Update integration test data to use TCPAddr key.

--- a/test/integration/testdata/conf/namingServerch.conf
+++ b/test/integration/testdata/conf/namingServerch.conf
@@ -2,14 +2,14 @@
     "RootZonePublicKeyPath":        "testdata/keys/selfSignedRootDelegationAssertion.gob",
     "ServerAddress":                {
                                         "Type":     "TCP",
-                                        "Addr":  {
+                                        "TCPAddr":  {
                                                         "IP":   "127.0.0.1",
                                                         "Port": 5023
                                                     }
                                     },
     "PublisherAddress":             {
                                         "Type":     "TCP",
-                                        "Addr":  {
+                                        "TCPAddr":  {
                                                         "IP":   "127.0.0.1"
                                                     }
                                     },
