--- a/test/integration/testdata/conf/resolver.conf
+++ b/test/integration/testdata/conf/resolver.conf
@@ -2,7 +2,7 @@
     "RootZonePublicKeyPath":        "testdata/keys/selfSignedRootDelegationAssertion.gob",
     "ServerAddress":                {
                                         "Type":     "TCP",
-                                        "Addr":  {
+                                        "TCPAddr":  {
                                                         "IP":   "127.0.0.1",
                                                         "Port": 5025,
                                                         "Zone": ""
