--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,10 @@ _testmain.go
 /cmd/zonepub/zonepub
 /build/*
 
-#zonepub test file
+#test file
 /cmd/zonepub/data/newZonefile.txt
+internal/pkg/keyManager/testdata/test_pub.pem
+internal/pkg/keyManager/testdata/test_sec.pem
 
 #test coverage files
 *coverage.out
