Fix resolver2 config file to use TCPAddr.

--- a/test/integration/testdata/conf/resolver2.conf
+++ b/test/integration/testdata/conf/resolver2.conf
@@ -7,7 +7,7 @@
 	"PreloadCaches": true,
     "ServerAddress":                {
                                         "Type":     "TCP",
-                                        "Addr":  {
+                                        "TCPAddr":  {
                                                         "IP":   "127.0.0.1",
                                                         "Port": 5026,
                                                         "Zone": ""
