--- a/test/integration/testdata/conf/namingServerethz.ch.conf
+++ b/test/integration/testdata/conf/namingServerethz.ch.conf
@@ -4,20 +4,13 @@
 	"NegAssertionCheckPointInterval":3600,
 	"ZoneKeyCheckPointInterval":3600,
 	"CheckPointPath": "testdata/checkpoint/ethz.ch/",
-	"PreloadCaches": false,
+	"PreLoadCaches": false,
+
     "ServerAddress":                {
                                         "Type":     "TCP",
                                         "Addr":  {
                                                         "IP":   "127.0.0.1",
-                                                        "Port": 5024,
-                                                        "Zone": ""
-                                                    }
-                                    },
-    "PublisherAddress":             {
-                                        "Type":     "TCP",
-                                        "Addr":  {
-                                                        "IP":   "127.0.0.1",
-                                                        "Zone": ""
+                                                        "Port": 5024
                                                     }
                                     },
     "MaxConnections":               1000,
@@ -25,39 +18,41 @@
     "TCPTimeout":                   300,
     "TLSCertificateFile":           "testdata/cert/server.crt",
     "TLSPrivateKeyFile":            "testdata/cert/server.key",
-    "MaxMsgByteLength":             65536,
+    
     "PrioBufferSize":               20,
     "NormalBufferSize":             100,
+    "NotificationBufferSize":       10,
     "PrioWorkerCount":              2,
     "NormalWorkerCount":            10,
-    "ActiveTokenCacheSize":         1000,
+    "NotificationWorkerCount":      2,
+    "CapabilitiesCacheSize":        50,
+    "Capabilities":                 ["urn:x-rains:tlssrv"],
+
     "ZoneKeyCacheSize":             1000,
     "ZoneKeyCacheWarnSize":         750,
     "MaxPublicKeysPerZone":         5,
     "PendingKeyCacheSize":          1000,
-    "AssertionCacheSize":           10000,
-    "PendingQueryCacheSize":        100,
-    "RedirectionCacheSize":         1000,
-    "RedirectionCacheWarnSize":     750,
-    "CapabilitiesCacheSize":        50,
-    "NotificationBufferSize":       10,
-    "NotificationWorkerCount":      2,
-    "PeerToCapCacheSize":           1000,
-    "Capabilities":                 ["urn:x-rains:tlssrv"],
-    "InfrastructureKeyCacheSize":   1,
-    "ExternalKeyCacheSize":         1,
     "DelegationQueryValidity":      5,
+    "ReapZoneKeyCacheTimeout":      1800,
+    "ReapPendingKeyCacheTimeout":   1800,
+    
+    "AssertionCacheSize":           10000,
     "NegativeAssertionCacheSize":   1000,
-    "AddressQueryValidity":         5,
+    "PendingQueryCacheSize":        100,
     "QueryValidity":                5,
+    "Authorities":                  [
+                                        {
+                                            "Zone": "ethz.ch.",
+                                            "Context": "."
+                                        }
+                                    ],    
     "MaxCacheValidity":             {
                                         "AssertionValidity": 720,
                                         "ShardValidity": 720,
-                                        "ZoneValidity": 720,
-                                        "AddressAssertionValidity": 720
+                                        "PshardValidity": 720,
+                                        "ZoneValidity": 720
                                     },
-    "ReapVerifyTimeout":            1800,
-    "ReapEngineTimeout":            1800,
-    "ContextAuthority":             ["."],
-    "ZoneAuthority":                ["ethz.ch."]
+    "ReapAssertionCacheTimeout":    1800,
+    "ReapNegAssertionCacheTimeout": 1800,
+    "ReapPendingQCacheTimeout":     1800
 }
