--- a/test/integration/testdata/conf/resolver2.conf
+++ b/test/integration/testdata/conf/resolver2.conf
@@ -1,16 +1,16 @@
 {
     "RootZonePublicKeyPath":        "testdata/keys/selfSignedRootDelegationAssertion.gob",
-    "AssertionCheckPointInterval": 10,
-	"NegAssertionCheckPointInterval":10,
-	"ZoneKeyCheckPointInterval":10,
+    "AssertionCheckPointInterval": 3600,
+	"NegAssertionCheckPointInterval":3600,
+	"ZoneKeyCheckPointInterval":3600,
 	"CheckPointPath": "testdata/checkpoint/resolver/",
-	"PreloadCaches": true,
+	"PreLoadCaches": true,
+
     "ServerAddress":                {
                                         "Type":     "TCP",
                                         "Addr":  {
                                                         "IP":   "127.0.0.1",
-                                                        "Port": 5026,
-                                                        "Zone": ""
+                                                        "Port": 5026
                                                     }
                                     },
     "MaxConnections":               1000,
@@ -18,39 +18,36 @@
     "TCPTimeout":                   300,
     "TLSCertificateFile":           "testdata/cert/server.crt",
     "TLSPrivateKeyFile":            "testdata/cert/server.key",
-    "MaxMsgByteLength":             65536,
+    
     "PrioBufferSize":               20,
     "NormalBufferSize":             100,
+    "NotificationBufferSize":       10,
     "PrioWorkerCount":              2,
     "NormalWorkerCount":            10,
-    "ActiveTokenCacheSize":         1000,
+    "NotificationWorkerCount":      2,
+    "CapabilitiesCacheSize":        50,
+    "Capabilities":                 ["urn:x-rains:tlssrv"],
+
     "ZoneKeyCacheSize":             1000,
     "ZoneKeyCacheWarnSize":         750,
     "MaxPublicKeysPerZone":         5,
     "PendingKeyCacheSize":          1000,
-    "AssertionCacheSize":           10000,
-    "PendingQueryCacheSize":        100,
-    "RedirectionCacheSize":         1000,
-    "RedirectionCacheWarnSize":     750,
-    "CapabilitiesCacheSize":        50,
-    "NotificationBufferSize":       10,
-    "NotificationWorkerCount":      2,
-    "PeerToCapCacheSize":           1000,
-    "Capabilities":                 ["urn:x-rains:tlssrv"],
-    "InfrastructureKeyCacheSize":   1,
-    "ExternalKeyCacheSize":         1,
     "DelegationQueryValidity":      5,
+    "ReapZoneKeyCacheTimeout":      1800,
+    "ReapPendingKeyCacheTimeout":   1800,
+    
+    "AssertionCacheSize":           10000,
     "NegativeAssertionCacheSize":   1000,
-    "AddressQueryValidity":         5,
+    "PendingQueryCacheSize":        100,
     "QueryValidity":                5,
+    "Authorities":                  [],    
     "MaxCacheValidity":             {
                                         "AssertionValidity": 720,
                                         "ShardValidity": 720,
-                                        "ZoneValidity": 720,
-                                        "AddressAssertionValidity": 720
+                                        "PshardValidity": 720,
+                                        "ZoneValidity": 720
                                     },
-    "ReapVerifyTimeout":            1800,
-    "ReapEngineTimeout":            1800,
-    "ContextAuthority":             [],
-    "ZoneAuthority":                []
+    "ReapAssertionCacheTimeout":    1800,
+    "ReapNegAssertionCacheTimeout": 1800,
+    "ReapPendingQCacheTimeout":     1800
 }
