--- a/cmd/rainsd/data/config/server-scion.conf
+++ b/cmd/rainsd/data/config/server-scion.conf
@@ -1,51 +1,44 @@
 {
-    "RootZonePublicKeyPath":        "keys/selfSignedRootDelegationAssertion.gob",
+    "RootZonePublicKeyPath":        "data/keys/rootDelegationAssertion.gob",
+    "AssertionCheckPointInterval": 3600,
+	"NegAssertionCheckPointInterval":3600,
+	"ZoneKeyCheckPointInterval":3600,
+	"CheckPointPath": "data/checkpoint/resolver/",
+	"PreLoadCaches": false,
     "ServerAddress":                {
-                                        "Type":     "TCP",
-                                        "TCPAddr":  {
-                                                        "IP":   "127.0.0.1",
-                                                        "Port": 5022,
-                                                        "Zone": ""
-                                                    }
+                                        "Type":     "SCION",
+                                        "Local": "1-ff00:0:133,[127.0.0.1]:0"
                                     },
+    "SciondSock":                   "/run/shm/sciond/sd1-ff00_0_133.sock",
+    "DispatcherSock":               "/run/shm/dispatcher/default.sock",
     "MaxConnections":               1000,
     "KeepAlivePeriod":              60,
     "TCPTimeout":                   300,
     "TLSCertificateFile":           "config/server.crt",
     "TLSPrivateKeyFile":            "config/server.key",
-    "MaxMsgByteLength":             65536,
     "PrioBufferSize":               1000,
     "NormalBufferSize":             100000,
     "PrioWorkerCount":              2,
     "NormalWorkerCount":            10,
-    "ActiveTokenCacheSize":         1000,
     "ZoneKeyCacheSize":             1000,
     "ZoneKeyCacheWarnSize":         750,
     "MaxPublicKeysPerZone":         5,
     "PendingKeyCacheSize":          1000,
     "AssertionCacheSize":           10000,
     "PendingQueryCacheSize":        100,
-    "RedirectionCacheSize":         1000,
-    "RedirectionCacheWarnSize":     750,
     "CapabilitiesCacheSize":        50,
     "NotificationBufferSize":       20,
     "NotificationWorkerCount":      2,
-    "PeerToCapCacheSize":           1000,
     "Capabilities":                 ["urn:x-rains:tlssrv"],
-    "InfrastructureKeyCacheSize":   10,
-    "ExternalKeyCacheSize":         5,
     "DelegationQueryValidity":      5,
     "NegativeAssertionCacheSize":   500,
-    "AddressQueryValidity":         5,
     "QueryValidity":                5,
     "MaxCacheValidity":             {
                                         "AssertionValidity": 720,
                                         "ShardValidity": 720,
-                                        "ZoneValidity": 720,
-                                        "AddressAssertionValidity": 720
+                                        "PshardValidity": 720,
+                                        "ZoneValidity": 720
                                     },
-    "ReapVerifyTimeout":            1800,
-    "ReapEngineTimeout":            1800,
     "ContextAuthority":             ["."],
     "ZoneAuthority":                ["ch."]
 }
