fix missing comma in integration test json config.

--- a/test/integration/testdata/conf/namingServerRoot.conf
+++ b/test/integration/testdata/conf/namingServerRoot.conf
@@ -5,7 +5,6 @@
 	"ZoneKeyCheckPointInterval":3600,
 	"CheckPointPath": "testdata/checkpoint/root/", 
 	"PreLoadCaches": false,
-
     "ServerAddress":                {
                                         "Type":     "TCP",
                                         "TCPAddr":  {
@@ -18,7 +17,7 @@
                                         "Type":     "TCP",
                                         "TCPAddr":  {
                                                         "IP":   "127.0.0.1",
-                                                        "Zone": ""
+                                                        "Zone": "",
                                                         "Port": 5022
                                                     }
                                     },
