--- a/test/integration/testdata/conf/namingServerethz.ch.conf
+++ b/test/integration/testdata/conf/namingServerethz.ch.conf
@@ -17,7 +17,7 @@
                                         "Type":     "TCP",
                                         "TCPAddr":  {
                                                         "IP":   "127.0.0.1",
-                                                        "Zone": ""
+                                                        "Zone": "",
                                                         "Port": 5024
                                                     }
                                     },
