--- a/cmd/rainsd/data/config/server-scion.conf
+++ b/cmd/rainsd/data/config/server-scion.conf
@@ -7,15 +7,15 @@
 	"PreLoadCaches": false,
     "ServerAddress":                {
                                         "Type":     "SCION",
-                                        "Local": "1-ff00:0:133,[127.0.0.1]:0"
+                                        "SCIONAddr": "1-ff00:0:133,[127.0.0.1]:0"
                                     },
     "SciondSock":                   "/run/shm/sciond/sd1-ff00_0_133.sock",
     "DispatcherSock":               "/run/shm/dispatcher/default.sock",
     "MaxConnections":               1000,
     "KeepAlivePeriod":              60,
     "TCPTimeout":                   300,
-    "TLSCertificateFile":           "config/server.crt",
-    "TLSPrivateKeyFile":            "config/server.key",
+    "TLSCertificateFile":           "data/cert/server.crt",
+    "TLSPrivateKeyFile":            "data/cert/server.key",
     "PrioBufferSize":               1000,
     "NormalBufferSize":             100000,
     "PrioWorkerCount":              2,
