updates keyManager and keyGeneration. pub uses new key storage format

--- a/test/integration/testdata/conf/publisherRoot.conf
+++ b/test/integration/testdata/conf/publisherRoot.conf
@@ -8,7 +8,7 @@
 										"Zone": ""
 									}
 					}],
-	"PrivateKeyPath": "testdata/keys/privateKeyRoot.txt",
+	"PrivateKeyPath": "testdata/keys/root",
 	"ShardingConf" : {
 		"IncludeShards": true,
 		"DoSharding": false,
