--- a/test/integration/testdata/conf/publisherethz.ch.conf
+++ b/test/integration/testdata/conf/publisherethz.ch.conf
@@ -8,7 +8,7 @@
 										"Zone": ""
 									}
 					}],
-	"PrivateKeyPath": "testdata/keys/privateKeyethz.ch.txt",
+	"PrivateKeyPath": "testdata/keys/ethz.ch",
 	"ShardingConf" : {
 		"IncludeShards": true,
 		"DoSharding": false,
