--- a/test/integration/testdata/conf/publisherch.conf
+++ b/test/integration/testdata/conf/publisherch.conf
@@ -8,7 +8,7 @@
 										"Zone": ""
 									}
 					}],
-	"PrivateKeyPath": "testdata/keys/privateKeych.txt",
+	"PrivateKeyPath": "testdata/keys/ch",
 	"ShardingConf" : {
 		"IncludeShards": true,
 		"DoSharding": false,
