--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,7 @@
 
 ignored = [
     "github.com/scionproto/scion/go/lib/snet",
-    "github.com/scionproto/scion/go/lib/sciond"
+    "github.com/scionproto/scion/go/lib/sciond",
     "github.com/scionproto/scion/go/lib/spath"]
 
 [[constraint]]
