--- a/test/integration/testdata/conf/publisherethz.ch.conf
+++ b/test/integration/testdata/conf/publisherethz.ch.conf
@@ -20,9 +20,8 @@
 		"DoPsharding" : false,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
-			"Hashfamily" : [5],
-			"NofHashFunctions" : 1,
-			"BFOpMode" : 1,
+			"BFAlgo" : "BloomKM12",
+			"BFHash" : "Shake256",
 			"BloomFilterSize" : 80
 		}
 	},
@@ -31,7 +30,7 @@
 		"AddSigMetaDataToAssertions": true,
 		"AddSigMetaDataToShards": true,
 		"AddSigMetaDataToPshards": true,
-		"SignatureAlgorithm": 1,
+		"SignatureAlgorithm": "Ed25519",
 		"KeyPhase": 1,
 		"SigValidSince": 1543840933,
 		"SigValidUntil": 2301221742,
