fixes publisher bug

--- a/test/integration/testdata/conf/publisherRootSCION.conf
+++ b/test/integration/testdata/conf/publisherRootSCION.conf
@@ -10,13 +10,13 @@
 	},
 	"PrivateKeyPath": "testdata/keys/privateKeyRoot.txt",
 	"ShardingConf" : {
-		"IncludeShards": true,
+		"KeepShards": true,
 		"DoSharding": false,
 		"MaxShardSize": -1, 
 		"NofAssertionsPerShard": 1
 	},
 	"PShardingConf" : {
-		"IncludePshards": true,
+		"KeepPshards": true,
 		"DoPsharding" : false,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
