--- a/test/integration/testdata/conf/publisherch.conf
+++ b/test/integration/testdata/conf/publisherch.conf
@@ -10,19 +10,19 @@
 					}],
 	"PrivateKeyPath": "testdata/keys/ch",
 	"ShardingConf" : {
-		"IncludeShards": true,
-		"DoSharding": false,
+		"KeepShards": false,
+		"DoSharding": true,
 		"MaxShardSize": -1, 
 		"NofAssertionsPerShard": 1
 	},
 	"PShardingConf" : {
-		"IncludePshards": true,
-		"DoPsharding" : false,
+		"KeepPshards": false,
+		"DoPsharding" : true,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
 			"BFAlgo" : "BloomKM12",
 			"BFHash" : "Shake256",
-			"BloomFilterSize" : 80
+			"BloomFilterSize" : 80 
 		}
 	},
 	"MetaDataConf" : {
