--- a/test/integration/testdata/conf/publisherethz.ch.conf
+++ b/test/integration/testdata/conf/publisherethz.ch.conf
@@ -10,13 +10,13 @@
 					}],
 	"PrivateKeyPath": "testdata/keys/ethz.ch",
 	"ShardingConf" : {
-		"IncludeShards": true,
+		"KeepShards": false,
 		"DoSharding": false,
 		"MaxShardSize": -1, 
 		"NofAssertionsPerShard": 1
 	},
 	"PShardingConf" : {
-		"IncludePshards": true,
+		"KeepPshards": false,
 		"DoPsharding" : false,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
