--- a/test/integration/testdata/conf/publisherRoot.conf
+++ b/test/integration/testdata/conf/publisherRoot.conf
@@ -10,14 +10,14 @@
 					}],
 	"PrivateKeyPath": "testdata/keys/root",
 	"ShardingConf" : {
-		"IncludeShards": false,
+		"KeepShards": false,
 		"DoSharding": true,
 		"MaxShardSize": 1000, 
 		"NofAssertionsPerShard": -1
 	},
 	"PShardingConf" : {
-		"IncludePshards": true,
-		"DoPsharding" : false,
+		"KeepPshards": false,
+		"DoPsharding" : true,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
 			"BFAlgo" : "BloomKM12",
@@ -38,8 +38,8 @@
 	},
 	"ConsistencyConf" : {
 		"DoConsistencyCheck": true,
-		"SortShards": false,
-		"SortZone": false,
+		"SortShards": true,
+		"SortZone": true,
 		"SigNotExpired": false,
 		"CheckStringFields": false
 	},
