--- a/test/integration/testdata/conf/publisherRoot.conf
+++ b/test/integration/testdata/conf/publisherRoot.conf
@@ -10,19 +10,18 @@
 					}],
 	"PrivateKeyPath": "testdata/keys/root",
 	"ShardingConf" : {
-		"IncludeShards": true,
-		"DoSharding": false,
-		"MaxShardSize": -1, 
-		"NofAssertionsPerShard": 1
+		"KeepShards": false,
+		"DoSharding": true,
+		"MaxShardSize": 1000, 
+		"NofAssertionsPerShard": -1
 	},
 	"PShardingConf" : {
-		"IncludePshards": true,
-		"DoPsharding" : false,
+		"KeepPshards": false,
+		"DoPsharding" : true,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
-			"Hashfamily" : [5],
-			"NofHashFunctions" : 1,
-			"BFOpMode" : 1,
+			"BFAlgo" : "BloomKM12",
+			"BFHash" : "Shake256",
 			"BloomFilterSize" : 80
 		}
 	},
@@ -31,14 +30,14 @@
 		"AddSigMetaDataToAssertions": true,
 		"AddSigMetaDataToShards": true,
 		"AddSigMetaDataToPshards": true,
-		"SignatureAlgorithm": 1,
+		"SignatureAlgorithm": "Ed25519",
 		"KeyPhase": 1,
 		"SigValidSince": 1543840931,
 		"SigValidUntil": 2301221742,
 		"SigSigningInterval": 60
 	},
 	"ConsistencyConf" : {
-		"DoConsistencyCheck": false,
+		"DoConsistencyCheck": true,
 		"SortShards": true,
 		"SortZone": true,
 		"SigNotExpired": false,
