--- a/test/integration/testdata/conf/publisherRootSCION.conf
+++ b/test/integration/testdata/conf/publisherRootSCION.conf
@@ -10,19 +10,18 @@
 	},
 	"PrivateKeyPath": "testdata/keys/privateKeyRoot.txt",
 	"ShardingConf" : {
-		"IncludeShards": true,
+		"KeepShards": true,
 		"DoSharding": false,
 		"MaxShardSize": -1, 
 		"NofAssertionsPerShard": 1
 	},
 	"PShardingConf" : {
-		"IncludePshards": true,
+		"KeepPshards": true,
 		"DoPsharding" : false,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
-			"Hashfamily" : [5],
-			"NofHashFunctions" : 1,
-			"BFOpMode" : 1,
+			"BFAlgo" : "BloomKM12",
+			"BFHash" : "Shake256",
 			"BloomFilterSize" : 80
 		}
 	},
@@ -31,7 +30,7 @@
 		"AddSigMetaDataToAssertions": true,
 		"AddSigMetaDataToShards": true,
 		"AddSigMetaDataToPshards": true,
-		"SignatureAlgorithm": 1,
+		"SignatureAlgorithm": "Ed25519",
 		"KeyPhase": 1,
 		"SigValidSince": 1543840931,
 		"SigValidUntil": 2301221742,
