--- a/test/integration/testdata/conf/publisherch.conf
+++ b/test/integration/testdata/conf/publisherch.conf
@@ -10,20 +10,19 @@
 					}],
 	"PrivateKeyPath": "testdata/keys/ch",
 	"ShardingConf" : {
-		"IncludeShards": true,
-		"DoSharding": false,
-		"MaxShardSize": -1, 
-		"NofAssertionsPerShard": 1
+		"KeepShards": false,
+		"DoSharding": true,
+		"MaxShardSize": 200, 
+		"NofAssertionsPerShard": -1
 	},
 	"PShardingConf" : {
-		"IncludePshards": true,
-		"DoPsharding" : false,
+		"KeepPshards": false,
+		"DoPsharding" : true,
 		"NofAssertionsPerPshard" : 2,
 		"BloomFilterConf" : {
-			"Hashfamily" : [5],
-			"NofHashFunctions" : 1,
-			"BFOpMode" : 1,
-			"BloomFilterSize" : 80
+			"BFAlgo" : "BloomKM12",
+			"BFHash" : "Shake256",
+			"BloomFilterSize" : 80 
 		}
 	},
 	"MetaDataConf" : {
@@ -31,7 +30,7 @@
 		"AddSigMetaDataToAssertions": true,
 		"AddSigMetaDataToShards": true,
 		"AddSigMetaDataToPshards": true,
-		"SignatureAlgorithm": 1,
+		"SignatureAlgorithm": "Ed25519",
 		"KeyPhase": 1,
 		"SigValidSince": 1543840932,
 		"SigValidUntil": 2301221742,
