--- a/test/integration/testdata/conf/SCIONresolver2.conf
+++ b/test/integration/testdata/conf/SCIONresolver2.conf
@@ -8,7 +8,7 @@
 
     "ServerAddress":                {
                                         "Type":     "SCION",
-                                        "SCIONAddr": "17-ffaa:1:133,[127.0.0.1]:5026"
+                                        "SCIONAddr": "1-ff00:0:110,[127.0.0.1]:5026"
                                     },
     "MaxConnections":               1000,
     "KeepAlivePeriod":              60,
