--- a/test/integration/testdata/conf/SCIONnamingServerRoot.conf
+++ b/test/integration/testdata/conf/SCIONnamingServerRoot.conf
@@ -7,11 +7,11 @@
 	"PreLoadCaches": false,
     "ServerAddress":                {
                                         "Type":     "SCION",
-                                        "SCIONAddr": "17-ffaa:1:133,[127.0.0.1]:5022"
+                                        "SCIONAddr": "1-ff00:0:110,[127.0.0.1]:5022"
                                     },
     "PublisherAddress":             {
                                         "Type":     "SCION",
-                                        "SCIONAddr": "17-ffaa:1:133,[127.0.0.1]:5022"
+                                        "SCIONAddr": "1-ff00:0:110,[127.0.0.1]:5022"
                                     },
     "MaxConnections":               1000,
     "KeepAlivePeriod":              60,
