--- a/test/integration/testdata/conf/SCIONpublisherethz.ch.conf
+++ b/test/integration/testdata/conf/SCIONpublisherethz.ch.conf
@@ -2,11 +2,11 @@
     "ZonefilePath": "testdata/zonefiles/SCIONethz.ch.txt",
 	"AuthServers": [{
 						"Type":     "SCION",
-						"SCIONAddr": "17-ffaa:1:133,[127.0.0.1]:5024"
+						"SCIONAddr": "1-ff00:0:110,[127.0.0.1]:5024"
 					}],
 	"SrcAddr":      {
 	                    "Type":     "SCION",
-						"SCIONAddr": "17-ffaa:1:133,[127.0.0.1]"
+						"SCIONAddr": "1-ff00:0:110,[127.0.0.1]"
 					},
 	"PrivateKeyPath": "testdata/keys/ethz.ch",
 	"ShardingConf" : {
