--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -29,6 +29,7 @@ required = [
 ]
 
 ignored = [
+    "github.com/scionproto/scion/go/lib/addr",
     "github.com/scionproto/scion/go/lib/snet",
     "github.com/scionproto/scion/go/lib/sciond",
     "github.com/scionproto/scion/go/lib/spath"]
