--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ version: 2
 jobs:
   build:
     docker:
+      # Can't use debian base image, because outdated cryptography does not install
+      #- image: circleci/golang:1.11-stretch
       - image: circleci/buildpack-deps:xenial
         user: root
     resource_class: medium
@@ -10,9 +12,8 @@ jobs:
       - run:
           name: setup envvar
           command: |
-              echo 'export GOPATH=/tmp/go' >> $BASH_ENV
               echo 'export SC=/tmp/go/src/github.com/scionproto/scion' >> $BASH_ENV
-              echo 'export PATH="$HOME/.local/bin:$GOPATH/bin:/root/bin:/usr/local/go/bin:$PATH"' >> $BASH_ENV
+              echo 'export PATH="/usr/local/go/bin:$PATH"' >> $BASH_ENV
       - checkout
       - run:
           name: install Go
@@ -23,20 +24,34 @@ jobs:
           name: get scion sources
           command: |
             apt-get update
-            apt-get install --assume-yes git python capnproto
-            mkdir -p $GOPATH/src/github.com/scionproto/scion
-            git clone https://github.com/netsec-ethz/scion $GOPATH/src/github.com/scionproto/scion
-            cat $GOPATH/src/github.com/scionproto/scion/env/pip3/requirements.txt > /tmp/scion_pip3_requirements.txt
+            apt-get install --assume-yes git capnproto
+            mkdir -p $SC
+            git clone https://github.com/netsec-ethz/scion $SC
+            cat ${SC}/env/pip3/requirements.txt > /tmp/scion_pip3_requirements.txt
       - restore_cache:
           keys:
-            - v2-pkg-cache-{{ checksum "go.sum" }}-{{ "/tmp/scion_pip3_requirements.txt" }}
+            - v2-pkg-cache-{{ checksum "go.sum" }}-{{ checksum "/tmp/scion_pip3_requirements.txt" }}
             - v2-pkg-cache-{{ checksum "go.sum" }}
+      - run:
+          name: run rains vet
+          command: |
+            make vet
+      - run:
+          name: run rains build
+          command: |
+            make all
+      - run:
+          name: run unit tests
+          command: |
+            make unit
       - run:
           name: build scion services
           command: |
             cd $SC
-            unset -v GOPATH
-            for service in "border" "cert_srv" "godispatcher" "path_srv" "sciond"; do go build -o ./bin/${service} github.com/scionproto/scion/go/${service}/; echo "Built ${service}"; done
+            for service in "border" "cert_srv" "godispatcher" "beacon_srv" "path_srv" "sciond"; do
+              go build -o ./bin/${service} github.com/scionproto/scion/go/${service}/;
+              echo "Built ${service}";
+            done
       - run:
           name: generate local SCION gen config
           command: |
@@ -44,6 +59,7 @@ jobs:
             apt-get install --assume-yes python3-venv python3-pip python3-yaml python3-pygments libssl-dev python3-openssl python3-nacl python3-lz4
             python3 -m venv --system-site-packages venv; source venv/bin/activate
             pip3 install -r env/pip3/requirements.txt
+            pip3 install supervisor==4.1.0 supervisor-wildcards==0.1.3
             echo -e '#!/bin/bash\necho "0.0.0.0"' > tools/docker-ip
             mkdir ./gen-certs
             openssl genrsa -out "gen-certs/tls.key" 2048; openssl req -new -x509 -key "gen-certs/tls.key" -out "gen-certs/tls.pem" -days 3650 -subj /CN=scion_def_srv
@@ -53,28 +69,15 @@ jobs:
       - run:
           name: run SCION AS
           command: |
-            cd $SC
-            apt-get install --assume-yes python-pip
+            cd $SC; source venv/bin/activate
             useradd --create-home --shell /bin/bash --groups sudo scion
             chown scion:scion -R ./
-            su scion -c 'pip2 install --user supervisor==3.3.1 supervisor-wildcards==0.1.3'
-            su scion -c 'PATH="/home/scion/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" ./supervisor/supervisor.sh reload'
-            su scion -c 'PATH="/home/scion/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" ./supervisor/supervisor.sh start dispatcher'
-            su scion -c 'PATH="/home/scion/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin" ./supervisor/supervisor.sh start as1-ff00_0_110:*'
-      - run:
-          name: run rains build
-          command: |
-            unset -v GOPATH
-            make all
-      - run:
-          name: run unit tests
-          command: |
-            unset -v GOPATH
-            make unit
+            su scion -c 'source venv/bin/activate && ./supervisor/supervisor.sh reload'
+            su scion -c 'source venv/bin/activate && ./supervisor/supervisor.sh start dispatcher'
+            su scion -c 'source venv/bin/activate && ./supervisor/supervisor.sh start as1-ff00_0_110:*'
       - run:
           name: run integration tests
           command: |
-            unset -v GOPATH
             make integration
       - save_cache:
           key: v2-pkg-cache-{{ checksum "go.sum" }}
