--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,15 @@ jobs:
       - run:
           name: checkout scion
           command: |
-            git clone https://github.com/netsec-ethz/scion ~/scion
+            # Get scion version from go modules. The sed command extracts the
+            # replacement if one is specified in the go.mod file.
+            scion_mod_version=$(go list -m github.com/scionproto/scion | sed -s 's/.*\s*=>\s*//')
+            scion_repo=https://${scion_mod_version% *}.git
+            # Extract the commit hash, which is the last part of the go modules version
+            scion_commit=${scion_mod_version##*-}
+            git clone ${scion_repo} ~/scion
+            cd ~/scion
+            git checkout --quiet ${scion_commit}
       - restore_cache:
           keys:
             - v1-pkg-cache-{{ checksum "~/scion/go.sum" }}-{{ checksum "go.sum" }}
